--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>My first repo</h1>
-    <img src="https://media.wired.co.uk/photos/606d9a3ba876dd2203a639aa/16:9/w_1920,c_limit/wired-uk-google-watching.jpg"
+    <img class="pic"
+        src="https://media.wired.co.uk/photos/606d9a3ba876dd2203a639aa/16:9/w_1920,c_limit/wired-uk-google-watching.jpg"
         alt="">
 </body>
 
