added the first blog

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <img class="pic"
         src="https://media.wired.co.uk/photos/606d9a3ba876dd2203a639aa/16:9/w_1920,c_limit/wired-uk-google-watching.jpg"
         alt="">
+    <h1>bangladesh is the beautyfull country</h1>
 </body>
 
 </html>
